--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -21,11 +21,6 @@ body, #navbar {
 @media (min-width: 1024px) {
 }
 
-
-.welcome {
-  height: 900px;
-}
-
 *::selection {
   color: #70d9ff;
   background-color: #00b83d;
@@ -35,6 +30,16 @@ body, #navbar {
 
 
 
+@media (min-width: 1700px) {
+  .link {
+    font-size: large;
+  }
+}
+@media (min-width: 2200px) {
+  .link {
+    font-size: x-large;
+  }
+}
 
 .link:hover {
   color: #00b378;
@@ -54,6 +59,20 @@ body, #navbar {
   padding: 12px;
   margin: 10px;
   display: inline-block;
+}
+
+.extern-icon {
+  width: 15px;
+}
+@media (min-width: 1700px) {
+  .extern-icon {
+    width: 20px;
+  }
+}
+@media (min-width: 2200px) {
+  .extern-icon {
+    width: 25px;
+  }
 }
 
 :is(.dark .extern-icon) {
